#pragma once

#include <string>

struct LogEntry
{
    std::string id;
    std::string name;
    std::string body;
};
