#pragma once

#include "Core/GameCommandResult.h"

class GameEventMessageMapper
{
  public:
    static void appendMessages(GameCommandResult &result);
};
